--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     container_name: producer
     build:
       context: .
-      dockerfile: producer/Dockerfile
+      dockerfile: kafka_producer/Dockerfile
     depends_on:
       - broker
     networks:
@@ -55,7 +55,7 @@ services:
     container_name: consumer
     build:
       context: .
-      dockerfile: consumer/Dockerfile
+      dockerfile: kafka_consumer/Dockerfile
     depends_on:
       - broker
       - producer
