--- a/kafka_consumer/Dockerfile
+++ b/kafka_consumer/Dockerfile
@@ -2,16 +2,16 @@ FROM python:3.11.1
 
 RUN apt-get update
 
-COPY structured/requirements.txt /opt/app/requirements.txt
+COPY kafka_consumer/requirements.txt /opt/app/requirements.txt
 
 WORKDIR /opt/app
 
 RUN pip install -r requirements.txt
 
-COPY structured/ /opt/app
+COPY kafka_consumer/ /opt/app
 
 # Set environment variables
-ENV LOG_FILE_PATH=../../var/log/structured.log
+ENV LOG_FILE_PATH=../../var/log/kafka_consumer.log
 ENV AGGREGATION_FILE_PATH=opt/app/output/aggregation.csv
 
 # kafka
@@ -20,4 +20,4 @@ ENV KAFKA_BOOTSTRAP_SERVERS=broker:29092
 WORKDIR /
 
 # use unbuffered output
-CMD ["python", "-u", "opt/app/src/structured.py"]
+CMD ["python", "-u", "opt/app/src/kafka_consumer.py"]
