--- a/kafka_producer/Dockerfile
+++ b/kafka_producer/Dockerfile
@@ -2,16 +2,16 @@ FROM python:3.11.1
 
 RUN apt-get update
 
-COPY landing/requirements.txt /opt/app/requirements.txt
+COPY kafka_producer/requirements.txt /opt/app/requirements.txt
 
 WORKDIR /opt/app
 
 RUN pip install -r requirements.txt
 
-COPY landing/ /opt/app
+COPY kafka_producer/ /opt/app
 
 # Set environment variables
-ENV LOG_FILE_PATH=../../var/log/landing.log
+ENV LOG_FILE_PATH=../../var/log/kafka_producer.log
 ENV BASE_FILE_PATH=opt/app/
 
 # kafka
@@ -20,4 +20,4 @@ ENV KAFKA_BOOTSTRAP_SERVERS=broker:29092
 WORKDIR /
 
 # use unbuffered output
-CMD ["python", "-u", "opt/app/src/landing.py"]
+CMD ["python", "-u", "opt/app/src/kafka_producer.py"]
