--- a/.github/workflows/test_consumer.yml
+++ b/.github/workflows/test_consumer.yml
@@ -8,20 +8,11 @@ on:
       - kafka_consumer/**
 
 jobs:
-  # Label of the container job
-  container-job:
-    # Containers must run in Linux based operating systems
-    runs-on: ubuntu-latest
-    # Service containers to run with `container-job`
-
+  build:
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    env:
-      ENV: test
-      CI: true
+        python-version: [3.11.4]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
