--- a/.github/workflows/test_consumer.yml
+++ b/.github/workflows/test_consumer.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r kafka_consumer/requirements.txt
           pip install -e .
 
       - name: Run unit tests
-        run: python -m pytest --import-mode=append tests/
+        run: cd kafka_consumer && python -m pytest --import-mode=append tests/
