--- a/.github/workflows/test_consumer.yml
+++ b/.github/workflows/test_consumer.yml
@@ -30,9 +30,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r kafka_consumer/requirements.txt
-          pip install -e .
+          cd kafka_consumer && python -m pip install --upgrade pip
+          cd kafka_consumer && pip install -r requirements.txt
+          cd kafka_consumer && pip install -e .
 
       - name: Run unit tests
         run: cd kafka_consumer && python -m pytest --import-mode=append tests/
