--- a/.github/workflows/test_consumer.yml
+++ b/.github/workflows/test_consumer.yml
@@ -16,32 +16,34 @@ jobs:
 
     services:
       zookeeper:
-        image: bitnami/zookeeper
+        image: confluentinc/cp-zookeeper:latest
         ports:
           - 2181:2181
         env:
-          ALLOW_ANONYMOUS_LOGIN: yes
-        options: >-
-          --health-cmd "echo mntr | nc -w 2 -q 2 localhost 2181"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-      kafka:
-        image: bitnami/kafka
+          ZOOKEEPER_CLIENT_PORT: 2181
+          ZOOKEEPER_TICK_TIME: 2000
+
+      broker:
+        image: confluentinc/cp-kafka:latest
+        depends-on: zookeeper
         ports:
+          - 29092:29092
           - 9092:9092
-        options: >-
-          --health-cmd "kafka-broker-api-versions.sh --version"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          - 9101:9101
         env:
-          KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper:2181
-          ALLOW_PLAINTEXT_LISTENER: yes
-          KAFKA_CFG_LISTENERS: PLAINTEXT://:9092
-          KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://127.0.0.1:9092
-          KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: "CLIENT:PLAINTEXT,INTERNAL:PLAINTEXT"
-          KAFKA_CFG_INTER_BROKER_LISTENER_NAME: INTERNAL
+          KAFKA_BROKER_ID: 1
+          KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+          KAFKA_ADVERTISED_LISTENERS: LISTENER_INTERNAL://broker:29092,LISTENER_EXTERNAL://localhost:9092
+          KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_INTERNAL
+          KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_INTERNAL:PLAINTEXT,LISTENER_EXTERNAL:PLAINTEXT
+          KAFKA_LISTENERS: LISTENER_INTERNAL://:29092,LISTENER_EXTERNAL://:9092
+          KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+          KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+          KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+          KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+          KAFKA_JMX_PORT: 9101
+          KAFKA_JMX_HOSTNAME: localhost
+          # ALLOW_PLAINTEXT_LISTENER: "yes"
 
     steps:
       - name: Checkout
