--- a/.github/workflows/test_consumer.yml
+++ b/.github/workflows/test_consumer.yml
@@ -2,10 +2,10 @@ name: Run consumer tests
 on:
   pull_request:
     branches: [master]
-  push:
-    branches: [master]
-    paths:
-      - kafka_consumer/**
+  # push:
+  #  branches: [master]
+  #  paths:
+  #    - kafka_consumer/**
 
 jobs:
   build:
@@ -25,7 +25,6 @@ jobs:
 
       broker:
         image: confluentinc/cp-kafka:latest
-        depends-on: zookeeper
         ports:
           - 29092:29092
           - 9092:9092
