--- a/.github/workflows/test_consumer.yml
+++ b/.github/workflows/test_consumer.yml
@@ -4,8 +4,8 @@ on:
     branches: [master]
   push:
     branches: [master]
-  #  paths:
-  #    - kafka_consumer/**
+    paths:
+      - kafka_consumer/**
 
 jobs:
   build:
@@ -13,36 +13,6 @@ jobs:
       matrix:
         python-version: [3.11.3]
     runs-on: ubuntu-latest
-
-    services:
-      zookeeper:
-        image: confluentinc/cp-zookeeper:latest
-        ports:
-          - 2181:2181
-        env:
-          ZOOKEEPER_CLIENT_PORT: 2181
-          ZOOKEEPER_TICK_TIME: 2000
-
-      broker:
-        image: confluentinc/cp-kafka:latest
-        ports:
-          - 29092:29092
-          - 9092:9092
-          - 9101:9101
-        env:
-          KAFKA_BROKER_ID: 1
-          KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-          KAFKA_ADVERTISED_LISTENERS: LISTENER_INTERNAL://broker:29092,LISTENER_EXTERNAL://localhost:9092
-          KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_INTERNAL
-          KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_INTERNAL:PLAINTEXT,LISTENER_EXTERNAL:PLAINTEXT
-          KAFKA_LISTENERS: LISTENER_INTERNAL://:29092,LISTENER_EXTERNAL://:9092
-          KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-          KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-          KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-          KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-          KAFKA_JMX_PORT: 9101
-          KAFKA_JMX_HOSTNAME: localhost
-          # ALLOW_PLAINTEXT_LISTENER: "yes"
 
     steps:
       - name: Checkout
