fix: force test run

--- a/.github/workflows/test_producer.yml
+++ b/.github/workflows/test_producer.yml
@@ -4,8 +4,8 @@ on:
     branches: [master]
   push:
     branches: [master]
-    #paths:
-    #  - kafka_producer/**
+    paths:
+      - kafka_producer/**
 
 jobs:
   build:
@@ -32,10 +32,10 @@ jobs:
         env:
           KAFKA_BROKER_ID: 1
           KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-          KAFKA_ADVERTISED_LISTENERS: LISTENER_INTERNAL://broker:9092,LISTENER_EXTERNAL://localhost:29092
+          KAFKA_ADVERTISED_LISTENERS: LISTENER_INTERNAL://broker:29092,LISTENER_EXTERNAL://localhost:9092
           KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_INTERNAL
           KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_INTERNAL:PLAINTEXT,LISTENER_EXTERNAL:PLAINTEXT
-          KAFKA_LISTENERS: LISTENER_INTERNAL://:9092,LISTENER_EXTERNAL://:29092
+          KAFKA_LISTENERS: LISTENER_INTERNAL://:29092,LISTENER_EXTERNAL://:9092
           KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
           KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
           KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
